--- a/parallax.html
+++ b/parallax.html
@@ -23,6 +23,7 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, laudantium, quibusdam? Nobis, delectus, commodi, fugit amet tempora facere dolores nisi facilis consequatur, odio hic minima nostrum. Perferendis eos earum praesentium, blanditiis sapiente labore aliquam ipsa architecto vitae. Minima soluta temporibus voluptates inventore commodi cumque esse suscipit optio aliquam et, dolorem a cupiditate nihil fuga laboriosam fugiat placeat dignissimos! Unde eveniet placeat quisquam blanditiis voluptatem doloremque fugiat dolor repellendus ratione in. Distinctio provident dolorem modi cumque illo enim quidem tempora deserunt nostrum voluptate labore repellat quisquam quasi cum suscipit dolore ab consequuntur, ad porro earum temporibus. Laborum ad temporibus ex, omnis!
         </p>
+        <a href="https://br.freepik.com/fotos-gratis/vista-da-cidade-de-nova-york-eua_21631687.htm#query=cidade&position=13&from_view=search&track=sph">Imagem de rawpixel.com</a> no Freepik
       </section>
     
      
@@ -36,6 +37,7 @@
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, laudantium, quibusdam? Nobis, delectus, commodi, fugit amet tempora facere dolores nisi facilis consequatur, odio hic minima nostrum. Perferendis eos earum praesentium, blanditiis sapiente labore aliquam ipsa architecto vitae. Minima soluta temporibus voluptates inventore commodi cumque esse suscipit optio aliquam et, dolorem a cupiditate nihil fuga laboriosam fugiat placeat dignissimos! Unde eveniet placeat quisquam blanditiis voluptatem doloremque fugiat dolor repellendus ratione in. Distinctio provident dolorem modi cumque illo enim quidem tempora deserunt nostrum voluptate labore repellat quisquam quasi cum suscipit dolore ab consequuntur, ad porro earum temporibus. Laborum ad temporibus ex, omnis!
             </p>
+            <a href="https://br.freepik.com/fotos-gratis/foto-de-alto-angulo-de-uma-bela-paisagem-ao-por-do-sol-na-cidade-de-nova-york-eua_17117031.htm#query=cidade&position=39&from_view=search&track=sph#position=39&query=cidade">Imagem de wirestock</a> no Freepik
           </section>
 
           <div class="parallax2"></div>
@@ -46,6 +48,7 @@
              by yasmin
              <a  href="https://github.com/yasminatr2"> Meu Git Hub</a>
             </p>
+            <a href="https://br.freepik.com/fotos-gratis/bela-vista-da-cidade-de-uma-cidade-urbana-um-tiro-de-cima_7629803.htm#query=cidade&position=26&from_view=search&track=sph">Imagem de wirestock</a> no Freepik
           </footer>
 
 </body>
